--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,8 @@
+$primary-color: rgb(20, 77, 233);
+
 header {
     display: flex;
     justify-content: space-between;
     padding: 10px 40px;
+    color: $primary-color;
 }
